# Cpp_learn

./: CMakeLists.txt
app_flow/: CMakeLists.txt  breaking_loop.cpp  continuing_loop.cpp  do_while_loop.cpp  for_countdown.cpp  for_loop.cpp  for_loop_condition.cpp  for_loop_multi_variable.cpp  for_loop_range.cpp  if_else.cpp  nesting_loop.cpp  spaceship_operator.cpp  while_loop.cpp
arrays/: CMakeLists.txt  array_loop.cpp  array_passing.cpp  array_pointer.cpp  pointer_arithmetic.cpp
builder/: CMakeLists.txt  html_element.cpp  html_element.h  simple_builder.cpp
classes/: CMakeLists.txt  door_class.cpp  oven_class.cpp  pen_class.cpp  squirrel_class.cpp  vehicle_class.cpp
classes/door/: CMakeLists.txt  door.cpp
classes/door/includes/: door.h
classes/oven/: CMakeLists.txt  oven.cpp
classes/oven/includes/: oven.h
classes/pen/: CMakeLists.txt  pen.cpp
classes/pen/includes/: pen.h
classes/squirrel/: CMakeLists.txt  squirrel.cpp
classes/squirrel/includes/: squirrel.h
classes/vehicle/: CMakeLists.txt  vehicle.cpp
classes/vehicle/includes/: vehicle.h
console_data/: CMakeLists.txt  read_console_data.cpp
constants/: CMakeLists.txt  constants.cpp
encapsulation/: CMakeLists.txt  implement_properties.cpp
enums/: CMakeLists.txt  display_enum.cpp
functional/: CMakeLists.txt  Test.txt  auto.cpp  const_expr.cpp  declarative.cpp  file_line_count.cpp  function_function.cpp  immutable.cpp  immutable_levels.cpp  lambda.cpp  no_side_effects.cpp  transform.cpp
functions/: CMakeLists.txt  add_one.cpp  combine.cpp  command_line_params.cpp  connect_names.cpp  print_name.cpp  print_name_forward.cpp  set_user_name.cpp  strings.cpp  user_name.cpp
hello_world/: CMakeLists.txt
hierarchies/: CMakeLists.txt  inherited_members.cpp
hierarchies/FrozenFood/: CMakeLists.txt  frozen_food.cpp
hierarchies/FrozenFood/includes/: frozen_food.h
lambdas/: CMakeLists.txt  assign_lambda.cpp  consteval.cpp  create_macro.cpp  lambda_for_class.cpp  multi_task.cpp  priority_queue.cpp  return_deduction.cpp  sort_list.cpp  use_auto.cpp
patterns/: CMakeLists.txt  drive_car.cpp  observer1.cpp  observer2.cpp  singleton.cpp
patterns/mediator/: CMakeLists.txt  car_part.cpp  mediator.cpp
patterns/mediator/includes/: car_part.h  mediator.h
patterns/observer_auto/: CMakeLists.txt  observer_auto.cpp
patterns/observer_auto/includes/: observer_auto.h
patterns/observer_base/: CMakeLists.txt  observer_base.cpp
patterns/observer_base/includes/: observer_base.h
patterns/observer_std/: CMakeLists.txt  observer_std.cpp
patterns/observer_std/includes/: observer_std.h
patterns/questionnary/: CMakeLists.txt  questionnary.cpp
patterns/questionnary/includes/: questionnary.h
pointers/: CMakeLists.txt  change_pointer.cpp  dereference_pointer.cpp  free_pointer.cpp  initializer.cpp  optional_experimental.cpp  return_pointer.cpp  save_for_later.cpp  shared_ptr.cpp  string_pointer.cpp  string_pointer_2.cpp  unique_ptr.cpp  use_new.cpp  variable_address.cpp  variable_pointer.cpp  variable_pointer_2.cpp
random/: CMakeLists.txt  random_number.cpp
sources_headers/: CMakeLists.txt  main.cpp  safestuff.cpp
sources_headers/includes/: safestuff.h
standard_library/: CMakeLists.txt  array.cpp  copy_containers.cpp  dynamic_array.cpp  iterator.cpp  lists.cpp  map.cpp  map_compare.cpp  pointer_problem.cpp  ranges_views.cpp  set.cpp  set_union_intersection.cpp  stack_queue.cpp  store_me.cpp  store_me_vector.cpp  unordered_set.cpp  vector.cpp  vectors.cpp
switches/: CMakeLists.txt  switch_statement.cpp
templates/: CMakeLists.txt  absolute_value.cpp  absolute_value_method.cpp  cool_holder.cpp  derived.cpp  electricity.cpp  im_free.cpp  mediaholder.cpp  my_map.cpp  non_type_parm.cpp  price_controller.cpp  supermath.cpp  typedef_template.cpp
types/: CMakeLists.txt  type_convert.cpp
variables/: CMakeLists.txt  adding_integers.cpp  adding_strings.cpp  boolean.cpp  changing_string_char.cpp  changing_value.cpp  conditional_operator.cpp  copy_variable.cpp  create_int_variable.cpp  create_string.cpp  dividing_integers.cpp  individual_character.cpp  multiple_variables.cpp  multiplying_integers.cpp  read_int.cpp  read_string.cpp  subtracting_integers.cpp
variadics/: CMakeLists.txt  variadic_template.cpp  variadic_template_2.cpp  variadic_template_3.cpp
