cmake_minimum_required(VERSION 3.18)
project(cpp_learn)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(hello_world)
add_subdirectory(variables)
add_subdirectory(app_flow)
add_subdirectory(functions)
add_subdirectory(sources_headers)
add_subdirectory(pointers)
add_subdirectory(classes)
add_subdirectory(types)
add_subdirectory(console_data)
add_subdirectory(constants)
add_subdirectory(switches)
add_subdirectory(random)
add_subdirectory(arrays)
add_subdirectory(encapsulation)
add_subdirectory(hierarchies)
add_subdirectory(patterns)
add_subdirectory(functional)
add_subdirectory(lambdas)