add_executable(spaceship_operator
    spaceship_operator.cpp)

add_executable(if_else
    if_else.cpp)

add_executable(for_loop
    for_loop.cpp)

add_executable(for_countdown
    for_countdown.cpp)

add_executable(for_loop_multi_variable
    for_loop_multi_variable.cpp)
    
add_executable(for_loop_range
    for_loop_range.cpp)

add_executable(for_loop_condition
    for_loop_condition.cpp)

add_executable(while_loop
    while_loop.cpp)
    
add_executable(do_while_loop
    do_while_loop.cpp)

add_executable(breaking_loop
    breaking_loop.cpp)
    
add_executable(continuing_loop
    continuing_loop.cpp)

add_executable(nesting_loop
    nesting_loop.cpp)