add_executable(immutable
immutable.cpp)

add_executable(immutable_levels
immutable_levels.cpp)

add_executable(const_expr
const_expr.cpp)

add_executable(file_line_count
file_line_count.cpp)

add_executable(no_side_effects
no_side_effects.cpp)

add_executable(declarative
declarative.cpp)

add_executable(auto
auto.cpp)

add_executable(function_function
function_function.cpp)

add_executable(transform
transform.cpp)

add_executable(lambda
lambda.cpp)