add_executable(add_one
    add_one.cpp)

add_executable(user_name
    user_name.cpp)

add_executable(connect_names
    connect_names.cpp)

add_executable(set_user_name
    set_user_name.cpp)

add_executable(print_name
    print_name.cpp)

add_executable(print_name_forward
    print_name_forward.cpp)

add_executable(combine
    combine.cpp)

add_executable(strings
    strings.cpp)

add_executable(command_line_params
    command_line_params.cpp)