add_executable(variable_address
variable_address.cpp)

add_executable(dereference_pointer
dereference_pointer.cpp)

add_executable(save_for_later
save_for_later.cpp)

add_executable(string_pointer
string_pointer.cpp)

add_executable(string_pointer_2
string_pointer_2.cpp)

add_executable(change_pointer
change_pointer.cpp)

add_executable(use_new
use_new.cpp)

add_executable(initializer
initializer.cpp)

add_executable(free_pointer
free_pointer.cpp)

add_executable(unique_ptr
unique_ptr.cpp)

add_executable(shared_ptr
shared_ptr.cpp)

add_executable(optional_experimental
optional_experimental.cpp)

add_executable(variable_pointer
variable_pointer.cpp)

add_executable(variable_pointer_2
variable_pointer_2.cpp)

add_executable(return_pointer
return_pointer.cpp)