add_executable(vector
vector.cpp)

add_executable(vectors
vectors.cpp)

add_executable(array
array.cpp)

add_executable(map
map.cpp)

add_executable(store_me
store_me.cpp)

add_executable(store_me_vector
store_me_vector.cpp)

add_executable(map_compare
map_compare.cpp)

add_executable(iterator
iterator.cpp)

add_executable(pointer_problem
pointer_problem.cpp)

add_executable(sets
sets.cpp)

add_executable(set_union_intersection
set_union_intersection.cpp)

add_executable(lists
lists.cpp)

add_executable(stack_queue
stack_queue.cpp)