add_executable(cool_holder
cool_holder.cpp)

add_executable(im_free
im_free.cpp)

add_executable(electricity
electricity.cpp)

add_executable(price_controller
price_controller.cpp)

add_executable(my_map
my_map.cpp)

add_executable(non_type_parm
non_type_parm.cpp)

add_executable(typedef_template
typedef_template.cpp)

add_executable(mediaholder
mediaholder.cpp)