add_executable(create_int_variable
create_int_variable.cpp)

add_executable(multiple_variables
multiple_variables.cpp)

add_executable(changing_value
changing_value.cpp)

add_executable(copy_variable
copy_variable.cpp)

add_executable(adding_integers
adding_integers.cpp)

add_executable(subtracting_integers
subtracting_integers.cpp)

add_executable(multiplying_integers
multiplying_integers.cpp)

add_executable(dividing_integers
dividing_integers.cpp)