add_executable(create_integer
create_integer.cpp)

add_executable(multiple_variables
multiple_variables.cpp)

add_executable(changing_value
changing_value.cpp)

add_executable(copy_variable
copy_variable.cpp)

add_executable(adding_integers
adding_integers.cpp)

add_executable(subtracting_integers
subtracting_integers.cpp)

add_executable(multiplying_integers
multiplying_integers.cpp)

add_executable(dividing_integers
dividing_integers.cpp)

add_executable(create_string
create_string.cpp)

add_executable(individual_character
individual_character.cpp)

add_executable(changing_string_char
changing_string_char.cpp)

add_executable(adding_strings
adding_strings.cpp)

add_executable(conditional_operator
conditional_operator.cpp)

add_executable(boolean
boolean.cpp)

add_executable(read_string
read_string.cpp)

add_executable(read_int
read_int.cpp)